Fix wrong packages names

--- a/src/main/resources/locale.properties
+++ b/src/main/resources/locale.properties
@@ -1,1 +1,32 @@
 app_name = Calculator
+file = File
+edit = Edit
+undo = Undo
+redo = Redo
+open = Open
+save = Save
+override = Override
+exit = Exit
+help = Help
+author = Author
+author_message = <html><b>Author:</b><br><p>Mateusz Bagiński(cziken58@gmail.com)</p></html>
+info_message = <html><b>Info message</b></html>
+info = Info
+row = Row:
+col = Column:
+enter = Enter
+fill = Fill
+expression_value = Expression value
+incorrect_number_format = Incorrect number format
+error = Error
+clear = Clear
+elements_sum = Elements Sum
+elements_avg = Elements Avg
+elements_max_min = Elements Max Min
+min_max_value = min: {0} max: {1}
+modified = Modified: {0}
+default_status = Default status
+yes = Yes
+nope = Nope
+confirm_exit_discard_changes = Confirm exit discard changes?
+confirm_exit = Confirm exit
